--- a/index.html
+++ b/index.html
@@ -7,19 +7,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>MaF - Podcast</title>
 
-  <!-- 
-    - favicon link
-  -->
+  <!--favicon link-->
   <link rel="shortcut icon" href="arquivos/imagens/favicon.svg" type="image/svg+xml">
 
-  <!-- 
-    - custom css link
-  -->
+  <!--custom css link-->
   <link rel="stylesheet" href="arquivos/style.css">
 
-  <!-- 
-    - google font link
-  -->
+  <!--google font link-->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@400;500;700&display=swap" rel="stylesheet">
@@ -27,16 +21,11 @@
 
 <body id="top">
 
-
   <!-- HEADER -->
-
   <header class="active" data-header>
     <div class="container">
 
-      <!-- 
-        - overlay
-      -->
-      <div class="overlay" data-overlay></div>
+      <div class="overlay" data-overlay></div> <!--overlay-->
 
       <a href="#" class="logo">
         <img src="arquivos/imagens/logo.svg" alt="Micro logo">
@@ -67,16 +56,10 @@
     </div>
   </header>
 
-
-
-
-
   <main>
     <article class="container">
 
-      <!-- 
-        - #HERO
-      -->
+      <!--#HERO-->
 
       <section class="hero" id="hero">
 
@@ -90,33 +73,21 @@
             lectus eget morbi dui felis.
           </p>
 
-          <div class="hero-btn-group">
-
-            <button class="btn btn-primary">
-              <ion-icon name="headset"></ion-icon>
-
-              <span>Listen Now</span>
-            </button>
-
             <div class="btn-link-wrapper">
 
               <p class="btn-title">Subscribe On:</p>
 
-              <a href="#" class="btn-link">
+              <a href="https://www.apple.com/br/apple-music/" class="btn-link">
                 <ion-icon name="logo-apple"></ion-icon>
-
                 <span>Apple Music</span>
               </a>
 
-              <a href="#" class="btn-link">
+              <a href="https://soundcloud.com/discover" class="btn-link">
                 <ion-icon name="logo-soundcloud"></ion-icon>
-
                 <span>SoundCloud</span>
               </a>
 
             </div>
-
-          </div>
 
         </div>
 
@@ -124,12 +95,7 @@
 
       </section>
 
-
-
-      <!-- 
-        - #PODCAST
-      -->
-
+      <!--PODCAST-->
       <section class="podcast" id="podcast">
         <ul class="podcast-list">
 
@@ -279,14 +245,7 @@
         </ul>
       </section>
 
-
-
-
-
-
-      <!-- 
-    - #FOOTER
-  -->
+      <!--FOOTER-->
 
       <footer>
 
@@ -364,26 +323,16 @@
       </footer>
 
 
-      <!-- 
-    - #GO TO TOP
-  -->
+      <!--Botão que vai para o topo-->
 
       <a href="#top" class="go-top" data-go-top>
         <ion-icon name="chevron-up-outline"></ion-icon>
       </a>
 
-
-
-
-
-      <!-- 
-    - custom js link
-  -->
+      <!--Link JS-->
       <script src="arquivos/script.js"></script>
 
-      <!-- 
-    - ionicon link
-  -->
+      <!--ionicon link-->
       <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
       <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
 
